YAML front matter

--- a/_posts/2016-06-17-我的移民故事.md
+++ b/_posts/2016-06-17-我的移民故事.md
@@ -1,4 +1,12 @@
+---
+layout: post
+title: 我的移民故事
+category: 移民
+tags: immigration, whv, ielts
+---
+
 ## 我的移民故事
+
 ### 准备篇
 这个故事还得从我媳妇那开始说。2011年，大学毕业第三个年头，国内大部分城市空气恶化刚刚通过数字全民普及开来的时候，和媳妇商量了一下，移民吧。。。
 
